--- a/templates/news/contact.html
+++ b/templates/news/contact.html
@@ -1,7 +1,6 @@
 {% extends 'news/base.html' %}
 {% load static %}
-
-{% block title %} Contact sahifasi {% endblock title %}
+{% block title %} Contact US {% endblock title %}
 {% block content %}
 <section id="contentSection">
     <div class="row">
