--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,9 +1,9 @@
 {% extends 'news/base.html' %}
-{% load i18n %}
 
-{% block title %}{% blocktrans %}Password changed successfully{% endblocktrans %}{% endblock title %}
+
+{% block title %}Password changed successfully}{% endblock title %}
 
 {% block content %}
-     <h1>{% blocktrans %}Password changed successfully.{% endblocktrans %} </h1>
-     <p>{% blocktrans %}Your password has been reset you can now {% endblocktrans %}<a href="{% url 'login' %}">{% blocktrans %}login{% endblocktrans %}</a> {% blocktrans %}again.{% endblocktrans %}</p>
+     <h1>Password changed successfully. </h1>
+     <p>Your password has been reset you can now <a href="{% url 'login' %}"login</a> again.</p>
 {% endblock content %}
