--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,20 +1,20 @@
 {% extends 'news/base.html' %}
 {% load static %}
-{% load i18n %}
 
-{% block title %}{% blocktrans %}Reset user password.{% endblocktrans %}{% endblock title %}
+
+{% block title %}Reset user password.{% endblock title %}
 
 {% block content %}
-    <h1>{% blocktrans %}Reset Password{% endblocktrans %}</h1>
-    <p>{% blocktrans %}Fill out the form below to change your password{% endblocktrans %}</p>
+    <h1>Reset Password</h1>
+    <p>Fill out the form below to change your password</p>
     {% if validlink %}
 
-       <p>{% blocktrans %}Please enter the new password twice.{% endblocktrans %}</p>
+       <p>Please enter the new password twice.</p>
        <form method="post">{% csrf_token %}
          {{ form.as_p }}
-         <p><button type="submit">{% blocktrans %}Change Password{% endblocktrans %}</button></p>
+         <p><button type="submit">Change Password</button></p>
        </form>
     {% else %}
-       <p>{% blocktrans %}You are using the wrong link, it may have been used before.{% endblocktrans %}</p>
+       <p>You are using the wrong link, it may have been used before.</p>
     {% endif %}
 {% endblock content %}
