--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,13 +1,13 @@
 {% extends 'news/base.html' %}
-{% load i18n %}
 
-{% block title %}{% blocktrans %}Password recovery{% endblocktrans %}{% endblock title %}
+
+{% block title %}Password recovery{% endblock title %}
 
 {% block content %}
-     <h1>{% blocktrans %}Password recovery{% endblocktrans %}</h1>
-     <p>{% blocktrans %}Enter your email to reset your password{% endblocktrans %}</p>
+     <h1>Password recovery</h1>
+     <p>Enter your email to reset your password</p>
      <form method="post">{% csrf_token %}
          {{ form.as_p }}
-         <p><button type="submit">{% blocktrans %}Send Email{% endblocktrans %}</button></p>
+         <p><button type="submit">Send Email</button></p>
      </form>
 {% endblock content %}
