--- a/templates/account/register_done.html
+++ b/templates/account/register_done.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'news/base.html' %}
+{% load static %}
+
+{% block title %}You have successfully registered.{% endblock title %}
+
+{% block content %}
+    <h1>{{ new_user.first_name }} You have successfully registered.{</h1>
+    <p>You have successfully registered!</p>
+    <p>You can <a href="{% url 'login' %}">login</a>  to the site{}</p>
+{% endblock content %}
