--- a/templates/news/base.html
+++ b/templates/news/base.html
@@ -35,14 +35,21 @@
             </ul>
           </div>
           <div class="header_top_right">
+
+            {% if request.user.is_authenticated %}
+            <p><a href="{% url 'profile' %}"style="color: #570808">My profile</a></p>
             <p>{% now "jS : F Y H : i" %}</p>
+            {% else %}
+            <p><a href="{% url 'login' %}" style="color: #570808">Profilga kirish</a></p>
+            <p>{% now "jS : F Y H : i" %}</p>
+            {% endif %}
           </div>
         </div>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="header_bottom">
-          <div class="logo_area"><a href="" class="logo"><img src="'static 'images/logo.jpg' %}" alt=""></a></div>
-          <div class="add_banner"><a href="#"><img src="images/addbanner_728x90_V1.jpg" alt=""></a></div>
+          <div class="logo_area"><a href="" class="logo"><img src="{% static 'images/logo.jpg' %}" alt=""></a></div>
+          <div class="add_banner"><a href="#"><img src="{% static 'images/addbanner_728x90_V1.jpg' %}" alt=""></a></div>
         </div>
       </div>
     </div>
