--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'news/base.html' %}
+{% load static %}
+
+{% block title %} Login {% endblock title %}
+
+{% block content %}
+
+<h2>Veb saytiga kirish</h2>
+<p> Loginni tering </p>
+<h4> <a href="{% url 'password_reset' %}" >Parolni tiklash</a> </h4>
+<form method="post">  {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" >Login</button>
+
+</form>
+{% endblock content %}
