--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,9 +1,9 @@
 {% extends 'news/base.html' %}
-{% load i18n %}
 
-{% block title %{% blocktrans %}}User password has changed{% endblocktrans %}{% endblock title %}
+
+{% block title %}User password has changed{% endblock title %}
 
 {% block content %}
-     <h1>{% blocktrans %}User password has changed{% endblocktrans %}</h1>
-     <p>{{ request.user.username }}, {% blocktrans %}The user's password has been successfully changed{% endblocktrans %}</p>
+     <h1>User password has changed</h1>
+     <p>{{ request.user.username }} , The user's password has been successfully changed</p>
 {% endblock content %}
