--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,11 +1,11 @@
 {% extends 'news/base.html' %}
 {% load static %}
-{% load i18n %}
 
-{% block title %}{% blocktrans %}Change Password{% endblocktrans %}{% endblock title %}
+
+{% block title %}Change Password{% endblock title %}
 
 {% block content %}
-   <h1>{% blocktrans %}An email has been sent to change your password.{% endblocktrans %}</h1>
-   <p>{% blocktrans %}To change your password, a password reset link has been sent to your email.{% endblocktrans %}</p>
-   <p>{% blocktrans %}If you did not receive the email, please try again.{% endblocktrans %}</p>
+   <h1>An email has been sent to change your password.</h1>
+   <p>To change your password, a password reset link has been sent to your email.</p>
+   <p>If you did not receive the email, please try again.</p>
 {% endblock content %}
