--- a/templates/update/news_edit.html
+++ b/templates/update/news_edit.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'news/base.html'%}
+{% load static %}
+
+{% block title %}Yangilikni tahrirlash{% endblock title %}
+
+{% block content %}
+    <h2 class="text-center">Yangilikni ozgartirish </h2>
+    <form method="post" enctype="multipart/form-data">{% csrf_token %}
+         {{ form.as_p }}
+    <button type="submit" class="btn bg-warning ml-3 ">Ozgartirish</button>
+    </form>
+{% endblock content %}
